--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,18 @@ html, body {
   font-size: 1.3rem;
   padding: 70px;
 }
+
+button {
+  padding: 10px;
+  margin-right: 10px;
+  font-size: 1.3rem;
+
+  /* /* background-color: #292c35;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer; */
+}
